# Amber

./: .gitignore  README.md
backend/: app.py  main.py  onboarding.py  playground.py  pyproject.toml
landing/: package.json  pnpm-lock.yaml
landing/public/.well-known/: microsoft-identity-association.json
landing/src/: middleware.ts
landing/src/api/: endpoints.ts
landing/src/app/: layout.tsx  page.tsx
landing/src/app/1/: page.tsx
landing/src/app/2/: page.tsx
landing/src/app/3/: page.tsx
landing/src/app/how-it-works/: page.tsx
landing/src/app/new/: page.tsx
landing/src/app/new2/: page.tsx
landing/src/app/onboard/: OnboardPage.tsx  page.tsx
landing/src/app/page2/: page.tsx
landing/src/app/page3/: page.tsx
landing/src/app/s/[subdomain]/: layout.tsx  page.tsx
landing/src/app/s/[subdomain]/how-it-works/: page.tsx
landing/src/app/s/[subdomain]/onboard/: page.tsx
landing/src/app/s/[subdomain]/thanks/: page.tsx
landing/src/app/thanks/: page.tsx
landing/src/components/: BackgroundMedia.tsx
landing/src/lib/: background-image.ts  constants.ts
